--- a/create.html
+++ b/create.html
@@ -86,9 +86,13 @@
 
   <script>
     const firebaseConfig = {
-      apiKey: "AIzaSyAANME6i8psLUlX13AAi3PBgnd0IIvaY5Y",
-      authDomain: "seu-projeto.firebaseapp.com",
-      projectId: "seu-projeto",
+		apiKey: "AIzaSyAANME6i8psLUlX13AAi3PBgnd0IIvaY5Y",
+		authDomain: "ficharpg-edc5c.firebaseapp.com",
+		projectId: "ficharpg-edc5c",
+		storageBucket: "ficharpg-edc5c.firebasestorage.app",
+		messagingSenderId: "522630132698",
+		appId: "1:522630132698:web:30d3dc6f103916d70246e3",
+		measurementId: "G-6PJKQYBRRC"
     };
 
     firebase.initializeApp(firebaseConfig);
