--- a/ficha.html
+++ b/ficha.html
@@ -121,12 +121,13 @@
 <script>
 // CONFIG FIREBASE ------------------------------------------------------
 const firebaseConfig = {
-    apiKey: "AIzaSyAANME6i8psLUlX13AAi3PBgnd0IIvaY5Y",
-    authDomain: "ficharpg-edc5c.firebaseapp.com",
-    projectId: "ficharpg-edc5c",
-    storageBucket: "ficharpg-edc5c.appspot.com",
-    messagingSenderId: "522630132698",
-    appId: "1:522630132698:web:30d3dc6f103916d70246e3"
+	apiKey: "AIzaSyAANME6i8psLUlX13AAi3PBgnd0IIvaY5Y",
+	authDomain: "ficharpg-edc5c.firebaseapp.com",
+	projectId: "ficharpg-edc5c",
+	storageBucket: "ficharpg-edc5c.firebasestorage.app",
+	messagingSenderId: "522630132698",
+	appId: "1:522630132698:web:30d3dc6f103916d70246e3",
+	measurementId: "G-6PJKQYBRRC"
 };
 
 firebase.initializeApp(firebaseConfig);
