--- a/ficha.html
+++ b/ficha.html
@@ -2,83 +2,139 @@
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
-<title>Ficha</title>
+<title>Ficha do Personagem</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <style>
-body { background:#111; color:white; font-family:Arial; padding:20px; }
-.box { background:#1a1a1a; margin:10px 0; padding:15px; border-radius:10px; }
-.bar-bg { background:#333; width:100%; height:20px; border-radius:10px; margin:5px 0; }
-.bar { height:20px; border-radius:10px; }
-button { padding:8px; }
+  :root { --bg: #0f0f0f; --card: #1c1c1c; --primary: #e63946; --text: #f1f1f1; }
+  body { background: var(--bg); color: var(--text); font-family: 'Segoe UI', sans-serif; padding: 20px; display: flex; justify-content: center; }
+  
+  .container { width: 100%; max-width: 500px; }
+  
+  /* Header do Personagem */
+  .char-header { text-align: center; margin-bottom: 20px; }
+  .char-img { width: 150px; height: 150px; border-radius: 50%; object-fit: cover; border: 4px solid var(--primary); box-shadow: 0 0 20px rgba(230, 57, 70, 0.4); margin-bottom: 10px; }
+  h1 { margin: 5px 0; color: white; text-transform: uppercase; letter-spacing: 1px; }
+  .classe-tag { background: #333; padding: 4px 12px; border-radius: 15px; font-size: 0.9rem; color: #aaa; }
+
+  /* Barras de Status */
+  .stat-box { background: var(--card); padding: 15px; border-radius: 10px; margin-bottom: 15px; border: 1px solid #333; }
+  .stat-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 5px; }
+  .stat-title { font-weight: bold; color: #ccc; }
+  .stat-values { font-family: monospace; font-size: 1.1rem; }
+  
+  .bar-bg { background: #333; height: 12px; border-radius: 6px; overflow: hidden; position: relative; }
+  .bar-fill { height: 100%; background: var(--primary); width: 100%; transition: width 0.3s ease; box-shadow: 0 0 10px var(--primary); }
+  
+  .controls { display: flex; gap: 5px; margin-top: 10px; justify-content: flex-end; }
+  .btn-stat { width: 35px; height: 35px; background: #2a2a2a; color: white; border: 1px solid #444; border-radius: 5px; cursor: pointer; font-size: 1.2rem; display: flex; align-items: center; justify-content: center; transition: 0.2s; }
+  .btn-stat:hover { border-color: var(--primary); color: var(--primary); }
+  .btn-stat:active { background: var(--primary); color: white; }
+
+  /* Listas */
+  .list-section { background: var(--card); padding: 15px; border-radius: 10px; margin-bottom: 15px; }
+  .list-section h3 { border-bottom: 2px solid var(--primary); display: inline-block; margin-top: 0; color: var(--primary); }
+  ul { padding-left: 20px; color: #ccc; }
+  li { margin-bottom: 5px; }
+
+  .back-btn { background: transparent; border: 1px solid #666; color: #888; padding: 10px; width: 100%; border-radius: 6px; cursor: pointer; }
+  .back-btn:hover { border-color: white; color: white; }
 </style>
 </head>
-
 <body>
-<h1 id="charNome">Carregando...</h1>
-<img id="charImg" width="200">
 
-<div id="stats"></div>
+<div class="container">
+  <div class="char-header">
+    <img id="charImg" class="char-img" src="">
+    <h1 id="charNome">Carregando...</h1>
+    <span id="charClasse" class="classe-tag">...</span>
+  </div>
 
-<h2>Ataques</h2>
-<div id="ataques"></div>
+  <div id="statsArea"></div>
 
-<h2>Habilidades & Talentos</h2>
-<div id="habilidades"></div>
+  <div class="list-section">
+    <h3>⚔️ Ataques</h3>
+    <ul id="ataquesList"></ul>
+  </div>
 
-<h2>Feitiços</h2>
-<div id="feiticos"></div>
+  <div class="list-section">
+    <h3>🔥 Habilidades</h3>
+    <ul id="habsList"></ul>
+  </div>
 
-<br><a href="index.html"><button>Voltar</button></a>
+  <button class="back-btn" onclick="window.location='index.html'">Voltar para Lista</button>
+</div>
 
 <script type="module">
-import {
-  db, doc, getDoc, updateDoc
-} from "./firebase.js";
+import { db, doc, getDoc, updateDoc, onSnapshot } from "./firebase.js";
 
 const params = new URLSearchParams(location.search);
 const id = params.get("id");
+let fichaData = {};
 
-async function load() {
-  const snap = await getDoc(doc(db, "fichas", id));
-  const f = snap.data();
+// Monitora mudanças em tempo real (Outros players vendo sua vida descer)
+onSnapshot(doc(db, "fichas", id), (docSnap) => {
+  if (docSnap.exists()) {
+    fichaData = docSnap.data();
+    renderFicha(fichaData);
+  }
+});
 
-  charNome.innerText = f.nome;
-  charImg.src = f.imagem;
+function renderFicha(f) {
+  document.getElementById('charNome').innerText = f.nome;
+  document.getElementById('charClasse').innerText = f.classe || "Aventureiro";
+  
+  const imgEl = document.getElementById('charImg');
+  if(f.imagem) imgEl.src = f.imagem;
+  else imgEl.style.display = 'none';
 
-  renderStat("Vida", f.vida, "vida");
-  renderStat("Energia", f.energia, "energia");
-  renderStat("Vigor", f.vigor, "vigor");
-  renderStat("Integridade", f.integridade, "integridade");
+  // Renderiza Estatísticas
+  const statsArea = document.getElementById('statsArea');
+  statsArea.innerHTML = ""; // Limpa para redesenhar
+  
+  ['vida', 'energia', 'vigor', 'integridade'].forEach(stat => {
+    if(f[stat]) createStatBox(stat, f[stat], statsArea);
+  });
 
-  ataques.innerHTML = f.ataques.map(a => "- " + a).join("<br>");
-  habilidades.innerHTML = f.habilidades.map(h => "- " + h).join("<br>");
-  feiticos.innerHTML = f.feiticos.map(g => "- " + g).join("<br>");
+  // Renderiza Listas
+  document.getElementById('ataquesList').innerHTML = (f.ataques || []).map(i => `<li>${i}</li>`).join('');
+  document.getElementById('habsList').innerHTML = (f.habilidades || []).map(i => `<li>${i}</li>`).join('');
 }
 
-function renderStat(label, dados, campo) {
-  stats.innerHTML += `
-    <div class="box">
-      <h3>${label}: ${dados.atual} / ${dados.max}</h3>
-      <div class="bar-bg">
-        <div class="bar" style="width:${(dados.atual/dados.max)*100}%;background:red;"></div>
+function createStatBox(key, data, container) {
+  const percent = Math.min(100, (data.atual / data.max) * 100);
+  
+  const html = `
+    <div class="stat-box">
+      <div class="stat-header">
+        <span class="stat-title">${key.toUpperCase()}</span>
+        <span class="stat-values">${data.atual} / ${data.max}</span>
       </div>
-      <button onclick="alterar('${campo}', -1)">-</button>
-      <button onclick="alterar('${campo}', +1)">+</button>
+      <div class="bar-bg">
+        <div class="bar-fill" style="width: ${percent}%;"></div>
+      </div>
+      <div class="controls">
+        <button class="btn-stat" onclick="window.updateStat('${key}', -1)">-</button>
+        <button class="btn-stat" onclick="window.updateStat('${key}', 1)">+</button>
+      </div>
     </div>
   `;
+  container.innerHTML += html;
 }
 
-window.alterar = async function(stat, val) {
-  const snap = await getDoc(doc(db, "fichas", id));
-  const f = snap.data();
-  f[stat].atual = Math.max(0, Math.min(f[stat].max, Number(f[stat].atual) + val));
-  await updateDoc(doc(db, "fichas", id), f);
-  location.reload();
+// Função global para atualizar o banco
+window.updateStat = async (stat, delta) => {
+  if (!fichaData[stat]) return;
+  
+  const novoAtual = Math.max(0, Math.min(fichaData[stat].max, Number(fichaData[stat].atual) + delta));
+  
+  // Atualiza localmente primeiro para parecer instantâneo
+  fichaData[stat].atual = novoAtual;
+  
+  // Envia para o Firebase
+  await updateDoc(doc(db, "fichas", id), {
+    [`${stat}.atual`]: novoAtual
+  });
 };
-
-load();
 </script>
-
 </body>
 </html>
