--- a/ficha.html
+++ b/ficha.html
@@ -5,39 +5,62 @@
 <title>Ficha do Personagem</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-  :root { --bg: #0f0f0f; --card: #1c1c1c; --primary: #e63946; --text: #f1f1f1; }
-  body { background: var(--bg); color: var(--text); font-family: 'Segoe UI', sans-serif; padding: 20px; display: flex; justify-content: center; }
+  :root { 
+    --bg: #0f0f0f; 
+    --card: #1c1c1c; 
+    --primary: #e63946; /* Vida */
+    --energy: #58E8DA;  /* Energia */
+    --vigor: #69E858;   /* Vigor */
+    --sanity: #D073FA;  /* Integridade */
+    --text: #f1f1f1; 
+  }
   
+  body { background: var(--bg); color: var(--text); font-family: 'Segoe UI', sans-serif; padding: 20px; display: flex; justify-content: center; }
   .container { width: 100%; max-width: 500px; }
   
-  /* Header do Personagem */
+  /* Header */
   .char-header { text-align: center; margin-bottom: 20px; }
   .char-img { width: 150px; height: 150px; border-radius: 50%; object-fit: cover; border: 4px solid var(--primary); box-shadow: 0 0 20px rgba(230, 57, 70, 0.4); margin-bottom: 10px; }
   h1 { margin: 5px 0; color: white; text-transform: uppercase; letter-spacing: 1px; }
-  .classe-tag { background: #333; padding: 4px 12px; border-radius: 15px; font-size: 0.9rem; color: #aaa; }
+  
+  .tags-header { display: flex; justify-content: center; gap: 10px; flex-wrap: wrap; margin-top: 10px; }
+  .tag-badge { background: #333; padding: 5px 15px; border-radius: 20px; font-size: 0.9rem; color: #ccc; border: 1px solid #444; }
+  .tag-classe { color: var(--primary); border-color: var(--primary); }
+  .tag-origem { color: var(--energy); border-color: var(--energy); }
+
+  /* Grid de Atributos */
+  .attr-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; margin-bottom: 20px; }
+  .attr-box { background: #252525; padding: 10px; border-radius: 8px; text-align: center; border: 1px solid #333; }
+  .attr-label { font-size: 0.75rem; color: #aaa; text-transform: uppercase; display: block; margin-bottom: 5px; }
+  .attr-mod { font-size: 1.5rem; font-weight: bold; color: white; display: block; }
+  .attr-val { font-size: 0.8rem; color: #666; background: #111; padding: 2px 6px; border-radius: 4px; display: inline-block; margin-top: 5px; }
 
   /* Barras de Status */
   .stat-box { background: var(--card); padding: 15px; border-radius: 10px; margin-bottom: 15px; border: 1px solid #333; }
   .stat-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 5px; }
-  .stat-title { font-weight: bold; color: #ccc; }
+  .stat-title { font-weight: bold; color: #ccc; text-transform: uppercase; }
   .stat-values { font-family: monospace; font-size: 1.1rem; }
   
-  .bar-bg { background: #333; height: 12px; border-radius: 6px; overflow: hidden; position: relative; }
-  .bar-fill { height: 100%; background: var(--primary); width: 100%; transition: width 0.3s ease; box-shadow: 0 0 10px var(--primary); }
+  .bar-bg { background: #333; height: 12px; border-radius: 6px; overflow: hidden; }
+  .bar-fill { height: 100%; width: 100%; transition: width 0.3s ease; }
   
+  /* Cores das barras */
+  .bar-vida .bar-fill { background: var(--primary); box-shadow: 0 0 10px var(--primary); }
+  .bar-energia .bar-fill { background: var(--energy); box-shadow: 0 0 10px var(--energy); }
+  .bar-vigor .bar-fill { background: var(--vigor); box-shadow: 0 0 10px var(--vigor); }
+  .bar-integridade .bar-fill { background: var(--sanity); box-shadow: 0 0 10px var(--sanity); }
+
   .controls { display: flex; gap: 5px; margin-top: 10px; justify-content: flex-end; }
   .btn-stat { width: 35px; height: 35px; background: #2a2a2a; color: white; border: 1px solid #444; border-radius: 5px; cursor: pointer; font-size: 1.2rem; display: flex; align-items: center; justify-content: center; transition: 0.2s; }
-  .btn-stat:hover { border-color: var(--primary); color: var(--primary); }
-  .btn-stat:active { background: var(--primary); color: white; }
+  .btn-stat:hover { border-color: white; color: white; }
 
   /* Listas */
   .list-section { background: var(--card); padding: 15px; border-radius: 10px; margin-bottom: 15px; }
   .list-section h3 { border-bottom: 2px solid var(--primary); display: inline-block; margin-top: 0; color: var(--primary); }
-  ul { padding-left: 20px; color: #ccc; }
+  ul { padding-left: 20px; color: #ccc; margin-bottom: 0; }
   li { margin-bottom: 5px; }
 
   .back-btn { background: transparent; border: 1px solid #666; color: #888; padding: 10px; width: 100%; border-radius: 6px; cursor: pointer; }
-  .back-btn:hover { border-color: white; color: white; }
 </style>
 </head>
 <body>
@@ -45,10 +68,11 @@
 <div class="container">
   <div class="char-header">
     <img id="charImg" class="char-img" src="">
-    <h1 id="charNome">Carregando...</h1>
-    <span id="charClasse" class="classe-tag">...</span>
+    <h1 id="charNome">...</h1>
+    <div id="headerTags" class="tags-header"></div>
   </div>
 
+  <div id="atributosArea" class="attr-grid"></div>
   <div id="statsArea"></div>
 
   <div class="list-section">
@@ -61,17 +85,16 @@
     <ul id="habsList"></ul>
   </div>
 
-  <button class="back-btn" onclick="window.location='index.html'">Voltar para Lista</button>
+  <button class="back-btn" onclick="window.location='index.html'">Voltar</button>
 </div>
 
 <script type="module">
-import { db, doc, getDoc, updateDoc, onSnapshot } from "./firebase.js";
+import { db, doc, updateDoc, onSnapshot } from "./firebase.js";
 
 const params = new URLSearchParams(location.search);
 const id = params.get("id");
 let fichaData = {};
 
-// Monitora mudanças em tempo real (Outros players vendo sua vida descer)
 onSnapshot(doc(db, "fichas", id), (docSnap) => {
   if (docSnap.exists()) {
     fichaData = docSnap.data();
@@ -81,21 +104,45 @@ onSnapshot(doc(db, "fichas", id), (docSnap) => {
 
 function renderFicha(f) {
   document.getElementById('charNome').innerText = f.nome;
-  document.getElementById('charClasse').innerText = f.classe || "Aventureiro";
   
   const imgEl = document.getElementById('charImg');
-  if(f.imagem) imgEl.src = f.imagem;
-  else imgEl.style.display = 'none';
+  if(f.imagem) imgEl.src = f.imagem; else imgEl.style.display = 'none';
 
-  // Renderiza Estatísticas
-  const statsArea = document.getElementById('statsArea');
-  statsArea.innerHTML = ""; // Limpa para redesenhar
+  // Renderiza Badges
+  const classe = f.classe || "Aventureiro";
+  const origem = f.origem || "Desconhecido";
+  document.getElementById('headerTags').innerHTML = `
+    <span class="tag-badge tag-classe">${classe}</span>
+    <span class="tag-badge tag-origem">${origem}</span>
+  `;
+
+  // Renderiza Atributos
+  const attrArea = document.getElementById('atributosArea');
+  attrArea.innerHTML = "";
+  const attrOrder = ['forca', 'destreza', 'constituicao', 'inteligencia', 'sabedoria', 'presenca'];
+  const attrNames = { forca: 'FOR', destreza: 'DES', constituicao: 'CON', inteligencia: 'INT', sabedoria: 'SAB', presenca: 'PRE' };
   
+  attrOrder.forEach(key => {
+    const valor = f.atributos ? (f.atributos[key] || 10) : 10;
+    const mod = Math.floor((valor - 10) / 2);
+    const sinal = mod >= 0 ? "+" : "";
+
+    attrArea.innerHTML += `
+      <div class="attr-box">
+        <span class="attr-label">${attrNames[key]}</span>
+        <span class="attr-mod">${sinal}${mod}</span>
+        <span class="attr-val">${valor}</span>
+      </div>
+    `;
+  });
+
+  // Renderiza Barras
+  const statsArea = document.getElementById('statsArea');
+  statsArea.innerHTML = "";
   ['vida', 'energia', 'vigor', 'integridade'].forEach(stat => {
     if(f[stat]) createStatBox(stat, f[stat], statsArea);
   });
 
-  // Renderiza Listas
   document.getElementById('ataquesList').innerHTML = (f.ataques || []).map(i => `<li>${i}</li>`).join('');
   document.getElementById('habsList').innerHTML = (f.habilidades || []).map(i => `<li>${i}</li>`).join('');
 }
@@ -104,9 +151,9 @@ function createStatBox(key, data, container) {
   const percent = Math.min(100, (data.atual / data.max) * 100);
   
   const html = `
-    <div class="stat-box">
+    <div class="stat-box bar-${key}">
       <div class="stat-header">
-        <span class="stat-title">${key.toUpperCase()}</span>
+        <span class="stat-title">${key}</span>
         <span class="stat-values">${data.atual} / ${data.max}</span>
       </div>
       <div class="bar-bg">
@@ -121,19 +168,11 @@ function createStatBox(key, data, container) {
   container.innerHTML += html;
 }
 
-// Função global para atualizar o banco
 window.updateStat = async (stat, delta) => {
   if (!fichaData[stat]) return;
-  
   const novoAtual = Math.max(0, Math.min(fichaData[stat].max, Number(fichaData[stat].atual) + delta));
-  
-  // Atualiza localmente primeiro para parecer instantâneo
   fichaData[stat].atual = novoAtual;
-  
-  // Envia para o Firebase
-  await updateDoc(doc(db, "fichas", id), {
-    [`${stat}.atual`]: novoAtual
-  });
+  await updateDoc(doc(db, "fichas", id), { [`${stat}.atual`]: novoAtual });
 };
 </script>
 </body>
