--- a/ficha.html
+++ b/ficha.html
@@ -2,24 +2,18 @@
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
-<title>Ficha do Personagem</title>
+<title>Ficha RPG</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
   :root { 
-    --bg: #0f0f0f; 
-    --card: #1c1c1c; 
-    --primary: #e63946; /* Vida */
-    --energy: #58E8DA;  /* Energia */
-    --vigor: #69E858;   /* Vigor */
-    --sanity: #D073FA;  /* Integridade */
-    --text: #f1f1f1; 
+    --bg: #0f0f0f; --card: #1c1c1c; --primary: #e63946; 
+    --energy: #58E8DA; --vigor: #69E858; --sanity: #D073FA; --text: #f1f1f1; 
   }
-  
   body { background: var(--bg); color: var(--text); font-family: 'Segoe UI', sans-serif; padding: 20px; display: flex; justify-content: center; }
-  .container { width: 100%; max-width: 500px; }
+  .container { width: 100%; max-width: 500px; padding-bottom: 50px; }
   
   /* Header */
-  .char-header { text-align: center; margin-bottom: 20px; }
+  .char-header { text-align: center; margin-bottom: 20px; position: relative; }
   .char-img { width: 150px; height: 150px; border-radius: 50%; object-fit: cover; border: 4px solid var(--primary); box-shadow: 0 0 20px rgba(230, 57, 70, 0.4); margin-bottom: 10px; }
   h1 { margin: 5px 0; color: white; text-transform: uppercase; letter-spacing: 1px; }
   
@@ -27,45 +21,58 @@
   .tag-badge { background: #333; padding: 5px 15px; border-radius: 20px; font-size: 0.9rem; color: #ccc; border: 1px solid #444; }
   .tag-classe { color: var(--primary); border-color: var(--primary); }
   .tag-origem { color: var(--energy); border-color: var(--energy); }
+  .tag-nivel { color: white; border-color: white; font-weight: bold; }
 
-  /* Grid de Atributos */
+  /* Grid Atributos */
   .attr-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; margin-bottom: 20px; }
   .attr-box { background: #252525; padding: 10px; border-radius: 8px; text-align: center; border: 1px solid #333; }
-  .attr-label { font-size: 0.75rem; color: #aaa; text-transform: uppercase; display: block; margin-bottom: 5px; }
+  .attr-label { font-size: 0.75rem; color: #aaa; text-transform: uppercase; display: block; }
   .attr-mod { font-size: 1.5rem; font-weight: bold; color: white; display: block; }
   .attr-val { font-size: 0.8rem; color: #666; background: #111; padding: 2px 6px; border-radius: 4px; display: inline-block; margin-top: 5px; }
 
-  /* Barras de Status */
+  /* Barras */
   .stat-box { background: var(--card); padding: 15px; border-radius: 10px; margin-bottom: 15px; border: 1px solid #333; }
   .stat-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 5px; }
   .stat-title { font-weight: bold; color: #ccc; text-transform: uppercase; }
-  .stat-values { font-family: monospace; font-size: 1.1rem; }
-  
   .bar-bg { background: #333; height: 12px; border-radius: 6px; overflow: hidden; }
   .bar-fill { height: 100%; width: 100%; transition: width 0.3s ease; }
   
-  /* Cores das barras */
   .bar-vida .bar-fill { background: var(--primary); box-shadow: 0 0 10px var(--primary); }
   .bar-energia .bar-fill { background: var(--energy); box-shadow: 0 0 10px var(--energy); }
   .bar-vigor .bar-fill { background: var(--vigor); box-shadow: 0 0 10px var(--vigor); }
   .bar-integridade .bar-fill { background: var(--sanity); box-shadow: 0 0 10px var(--sanity); }
 
   .controls { display: flex; gap: 5px; margin-top: 10px; justify-content: flex-end; }
-  .btn-stat { width: 35px; height: 35px; background: #2a2a2a; color: white; border: 1px solid #444; border-radius: 5px; cursor: pointer; font-size: 1.2rem; display: flex; align-items: center; justify-content: center; transition: 0.2s; }
-  .btn-stat:hover { border-color: white; color: white; }
-
+  .btn-stat { width: 35px; height: 35px; background: #2a2a2a; color: white; border: 1px solid #444; border-radius: 5px; cursor: pointer; font-size: 1.2rem; display: flex; align-items: center; justify-content: center; }
+  
   /* Listas */
   .list-section { background: var(--card); padding: 15px; border-radius: 10px; margin-bottom: 15px; }
   .list-section h3 { border-bottom: 2px solid var(--primary); display: inline-block; margin-top: 0; color: var(--primary); }
   ul { padding-left: 20px; color: #ccc; margin-bottom: 0; }
   li { margin-bottom: 5px; }
 
-  .back-btn { background: transparent; border: 1px solid #666; color: #888; padding: 10px; width: 100%; border-radius: 6px; cursor: pointer; }
+  /* Botão Flutuante de Edição */
+  .fab-edit { position: fixed; bottom: 20px; right: 20px; background: #333; color: white; border: 2px solid #555; width: 50px; height: 50px; border-radius: 50%; font-size: 1.5rem; cursor: pointer; box-shadow: 0 4px 10px rgba(0,0,0,0.5); z-index: 100; }
+  .fab-edit:hover { background: var(--primary); border-color: var(--primary); }
+
+  /* MODAL DE EDIÇÃO */
+  .modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); z-index: 200; overflow-y: auto; padding: 20px; box-sizing: border-box; }
+  .modal-content { background: var(--card); padding: 20px; border-radius: 10px; max-width: 500px; margin: 0 auto; border: 1px solid #444; }
+  .modal h2 { margin-top: 0; color: var(--primary); }
+  .form-group { margin-bottom: 15px; }
+  .form-group label { display: block; color: #aaa; margin-bottom: 5px; font-size: 0.9rem; }
+  .form-group input, .form-group textarea { width: 100%; background: #111; border: 1px solid #333; color: white; padding: 10px; border-radius: 5px; box-sizing: border-box; }
+  .form-group textarea { height: 100px; resize: vertical; font-family: sans-serif; }
+  .grid-edit { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
+  .close-btn { background: #333; margin-top: 10px; width: 100%; padding: 10px; color: white; border: none; cursor: pointer; border-radius: 5px; }
+  .save-btn { background: var(--primary); width: 100%; padding: 10px; color: white; border: none; cursor: pointer; border-radius: 5px; font-weight: bold; margin-top: 20px; }
 </style>
 </head>
 <body>
 
 <div class="container">
+  <button class="fab-edit" onclick="abrirEditor()">⚙️</button>
+
   <div class="char-header">
     <img id="charImg" class="char-img" src="">
     <h1 id="charNome">...</h1>
@@ -84,8 +91,47 @@
     <h3>🔥 Habilidades</h3>
     <ul id="habsList"></ul>
   </div>
+  
+  <button class="close-btn" onclick="window.location='index.html'">Voltar</button>
+</div>
 
-  <button class="back-btn" onclick="window.location='index.html'">Voltar</button>
+<div id="editorModal" class="modal">
+  <div class="modal-content">
+    <h2>Editar Personagem</h2>
+    
+    <div class="form-group"><label>Nível</label><input type="number" id="editNivel"></div>
+    
+    <h3>Atributos</h3>
+    <div class="grid-edit">
+      <div class="form-group"><label>FOR</label><input type="number" id="editFor"></div>
+      <div class="form-group"><label>DES</label><input type="number" id="editDes"></div>
+      <div class="form-group"><label>CON</label><input type="number" id="editCon"></div>
+      <div class="form-group"><label>INT</label><input type="number" id="editInt"></div>
+      <div class="form-group"><label>SAB</label><input type="number" id="editSab"></div>
+      <div class="form-group"><label>PRE</label><input type="number" id="editPre"></div>
+    </div>
+
+    <h3>Máximos</h3>
+    <div class="grid-edit">
+      <div class="form-group"><label>Vida Máx</label><input type="number" id="editVidaMax"></div>
+      <div class="form-group"><label>Energia Máx</label><input type="number" id="editEnergiaMax"></div>
+      <div class="form-group"><label>Vigor Máx</label><input type="number" id="editVigorMax"></div>
+      <div class="form-group"><label>Integridade Máx</label><input type="number" id="editIntegridadeMax"></div>
+    </div>
+
+    <h3>Listas (1 item por linha)</h3>
+    <div class="form-group">
+      <label>Ataques</label>
+      <textarea id="editAtaques"></textarea>
+    </div>
+    <div class="form-group">
+      <label>Habilidades</label>
+      <textarea id="editHabs"></textarea>
+    </div>
+
+    <button class="save-btn" onclick="salvarEdicao()">SALVAR ALTERAÇÕES</button>
+    <button class="close-btn" onclick="fecharEditor()">Cancelar</button>
+  </div>
 </div>
 
 <script type="module">
@@ -93,8 +139,9 @@ import { db, doc, updateDoc, onSnapshot } from "./firebase.js";
 
 const params = new URLSearchParams(location.search);
 const id = params.get("id");
-let fichaData = {};
+let fichaData = {}; // Guarda os dados atuais
 
+// Monitoramento Real-time
 onSnapshot(doc(db, "fichas", id), (docSnap) => {
   if (docSnap.exists()) {
     fichaData = docSnap.data();
@@ -104,19 +151,20 @@ onSnapshot(doc(db, "fichas", id), (docSnap) => {
 
 function renderFicha(f) {
   document.getElementById('charNome').innerText = f.nome;
-  
   const imgEl = document.getElementById('charImg');
   if(f.imagem) imgEl.src = f.imagem; else imgEl.style.display = 'none';
 
-  // Renderiza Badges
+  // Badges (Agora com Nível)
   const classe = f.classe || "Aventureiro";
   const origem = f.origem || "Desconhecido";
+  const nivel = f.nivel || 1;
   document.getElementById('headerTags').innerHTML = `
+    <span class="tag-badge tag-nivel">NVL ${nivel}</span>
     <span class="tag-badge tag-classe">${classe}</span>
     <span class="tag-badge tag-origem">${origem}</span>
   `;
 
-  // Renderiza Atributos
+  // Atributos
   const attrArea = document.getElementById('atributosArea');
   attrArea.innerHTML = "";
   const attrOrder = ['forca', 'destreza', 'constituicao', 'inteligencia', 'sabedoria', 'presenca'];
@@ -126,52 +174,102 @@ function renderFicha(f) {
     const valor = f.atributos ? (f.atributos[key] || 10) : 10;
     const mod = Math.floor((valor - 10) / 2);
     const sinal = mod >= 0 ? "+" : "";
-
     attrArea.innerHTML += `
       <div class="attr-box">
         <span class="attr-label">${attrNames[key]}</span>
         <span class="attr-mod">${sinal}${mod}</span>
         <span class="attr-val">${valor}</span>
-      </div>
-    `;
+      </div>`;
   });
 
-  // Renderiza Barras
+  // Barras
   const statsArea = document.getElementById('statsArea');
   statsArea.innerHTML = "";
   ['vida', 'energia', 'vigor', 'integridade'].forEach(stat => {
     if(f[stat]) createStatBox(stat, f[stat], statsArea);
   });
 
+  // Listas
   document.getElementById('ataquesList').innerHTML = (f.ataques || []).map(i => `<li>${i}</li>`).join('');
   document.getElementById('habsList').innerHTML = (f.habilidades || []).map(i => `<li>${i}</li>`).join('');
 }
 
 function createStatBox(key, data, container) {
   const percent = Math.min(100, (data.atual / data.max) * 100);
-  
-  const html = `
+  container.innerHTML += `
     <div class="stat-box bar-${key}">
       <div class="stat-header">
         <span class="stat-title">${key}</span>
         <span class="stat-values">${data.atual} / ${data.max}</span>
       </div>
-      <div class="bar-bg">
-        <div class="bar-fill" style="width: ${percent}%;"></div>
-      </div>
+      <div class="bar-bg"><div class="bar-fill" style="width: ${percent}%;"></div></div>
       <div class="controls">
         <button class="btn-stat" onclick="window.updateStat('${key}', -1)">-</button>
         <button class="btn-stat" onclick="window.updateStat('${key}', 1)">+</button>
       </div>
-    </div>
-  `;
-  container.innerHTML += html;
+    </div>`;
 }
+
+// LOGICA DE EDIÇÃO
+window.abrirEditor = () => {
+  document.getElementById('editorModal').style.display = 'block';
+  
+  // Preencher campos com valores atuais
+  document.getElementById('editNivel').value = fichaData.nivel || 1;
+  
+  // Atributos
+  if(fichaData.atributos) {
+    document.getElementById('editFor').value = fichaData.atributos.forca;
+    document.getElementById('editDes').value = fichaData.atributos.destreza;
+    document.getElementById('editCon').value = fichaData.atributos.constituicao;
+    document.getElementById('editInt').value = fichaData.atributos.inteligencia;
+    document.getElementById('editSab').value = fichaData.atributos.sabedoria;
+    document.getElementById('editPre').value = fichaData.atributos.presenca;
+  }
+
+  // Maximos
+  document.getElementById('editVidaMax').value = fichaData.vida.max;
+  document.getElementById('editEnergiaMax').value = fichaData.energia.max;
+  document.getElementById('editVigorMax').value = fichaData.vigor.max;
+  document.getElementById('editIntegridadeMax').value = fichaData.integridade.max;
+
+  // Listas (Transforma Array em Texto com quebra de linha)
+  document.getElementById('editAtaques').value = (fichaData.ataques || []).join('\n');
+  document.getElementById('editHabs').value = (fichaData.habilidades || []).join('\n');
+};
+
+window.fecharEditor = () => {
+  document.getElementById('editorModal').style.display = 'none';
+};
+
+window.salvarEdicao = async () => {
+  const getNum = (id) => Number(document.getElementById(id).value);
+  const getTextList = (id) => document.getElementById(id).value.split('\n').filter(i => i.trim() !== "");
+
+  try {
+    await updateDoc(doc(db, "fichas", id), {
+      nivel: getNum('editNivel'),
+      atributos: {
+        forca: getNum('editFor'), destreza: getNum('editDes'), constituicao: getNum('editCon'),
+        inteligencia: getNum('editInt'), sabedoria: getNum('editSab'), presenca: getNum('editPre')
+      },
+      "vida.max": getNum('editVidaMax'),
+      "energia.max": getNum('editEnergiaMax'),
+      "vigor.max": getNum('editVigorMax'),
+      "integridade.max": getNum('editIntegridadeMax'),
+      ataques: getTextList('editAtaques'),
+      habilidades: getTextList('editHabs')
+    });
+    alert("Ficha atualizada!");
+    fecharEditor();
+  } catch(e) {
+    alert("Erro ao salvar: " + e.message);
+  }
+};
 
 window.updateStat = async (stat, delta) => {
   if (!fichaData[stat]) return;
   const novoAtual = Math.max(0, Math.min(fichaData[stat].max, Number(fichaData[stat].atual) + delta));
-  fichaData[stat].atual = novoAtual;
   await updateDoc(doc(db, "fichas", id), { [`${stat}.atual`]: novoAtual });
 };
 </script>
