--- a/mestre.html
+++ b/mestre.html
@@ -38,8 +38,18 @@
   
   .card-header { display: flex; align-items: center; margin-bottom: 15px; border-bottom: 1px solid #222; padding-bottom: 10px; }
   .card-header img { width: 50px; height: 50px; border-radius: 50%; border: 2px solid var(--primary); object-fit: cover; margin-right: 12px; }
-  .card-header h3 { margin: 0; font-size: 1.1rem; }
-  .card-header small { color: #888; display: block; }
+  .card-header h3 { margin: 0; font-size: 1.1rem; display: flex; align-items: center; gap: 8px; }
+  .card-header small { color: #888; display: block; margin-top: 2px; }
+
+  /* Badge de Nível */
+  .lvl-badge {
+    font-size: 0.7rem;
+    background: #333;
+    color: #fff;
+    padding: 2px 6px;
+    border-radius: 4px;
+    border: 1px solid #555;
+  }
 
   .stat-row { margin-bottom: 8px; font-size: 0.9rem; font-family: monospace; }
   .stat-label { display: flex; justify-content: space-between; margin-bottom: 2px; color: #ccc; }
@@ -93,9 +103,14 @@ onSnapshot(q, (snapshot) => {
     const f = doc.data();
     const id = doc.id;
     
+    // Cálculos
     const pVida = calcPct(f.vida);
     const pEnergia = calcPct(f.energia);
     const pSanidade = calcPct(f.integridade || f.vigor); 
+    
+    // Dados Extras
+    const nivel = f.nivel || 1;
+    const origemTxt = f.origem ? `• ${f.origem}` : "";
 
     grid.innerHTML += `
       <div class="char-card">
@@ -104,8 +119,8 @@ onSnapshot(q, (snapshot) => {
         <div class="card-header">
           <img src="${f.imagem || 'https://via.placeholder.com/50/333/666?text=?'}" onerror="this.src='https://via.placeholder.com/50'">
           <div>
-            <h3>${f.nome}</h3>
-            <small>${f.classe || 'N/A'}</small>
+            <h3>${f.nome} <span class="lvl-badge">Nvl ${nivel}</span></h3>
+            <small>${f.classe || 'Aventureiro'} ${origemTxt}</small>
           </div>
         </div>
 
@@ -120,7 +135,7 @@ onSnapshot(q, (snapshot) => {
         </div>
 
         <div class="stat-row san">
-          <div class="stat-label"><span>SANIDADE</span> <span>${f.integridade?.atual || 0}/${f.integridade?.max || 0}</span></div>
+          <div class="stat-label"><span>INTEGRIDADE</span> <span>${f.integridade?.atual || 0}/${f.integridade?.max || 0}</span></div>
           <div class="bar-mini-bg"><div class="bar-mini-fill" style="width:${pSanidade}%"></div></div>
         </div>
       </div>
@@ -136,3 +151,4 @@ function calcPct(stat) {
 
 </body>
 </html>
+
